--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -20,7 +20,8 @@
         android:layout_height="96dp"
         android:src="@drawable/profile"
         app:civ_border_width="2dp"
-        app:civ_border_color="@color/white"/>
+        app:civ_border_color="@color/white"
+        android:layout_gravity="center"/>
 
     <TextView
         android:id="@+id/user_profile_name"
@@ -28,6 +29,7 @@
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
         android:text="Username"
+        android:gravity="center"
         android:textSize="20sp"
         android:textStyle="bold"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
