--- a/app/src/main/res/menu/activity_home_drawer.xml
+++ b/app/src/main/res/menu/activity_home_drawer.xml
@@ -7,22 +7,27 @@
         <item
             android:id="@+id/nav_cart"
             android:icon="@drawable/nav_cart"
-            android:title="Cart" />
+            android:title="Cart"
+            android:iconTint="@color/white"/>
         <item
             android:id="@+id/nav_orders"
             android:icon="@drawable/orders"
-            android:title="Orders" />
+            android:title="Orders"
+            android:iconTint="@color/white"/>
         <item
             android:id="@+id/nav_categories"
             android:icon="@drawable/category"
-            android:title="Categories" />
+            android:title="Categories"
+            android:iconTint="@color/white"/>
         <item
             android:id="@+id/nav_settings"
             android:icon="@drawable/settings"
-            android:title="Settings" />
+            android:title="Settings"
+            android:iconTint="@color/white"/>
         <item
             android:id="@+id/nav_logout"
             android:icon="@drawable/logout"
-            android:title="Logout" />
+            android:title="Logout"
+            android:iconTint="@color/white"/>
     </group>
 </menu>
