--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -23,7 +23,7 @@
                       android:id="@+id/close_settings"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
-                      android:text="Close"
+                      android:text="Back"
                       android:textColor="@color/white"
                       android:textSize="18sp"
                       android:textStyle="bold"
@@ -40,6 +40,7 @@
                     android:layout_alignParentEnd="true"
                     android:layout_marginRight="10dp"
                     />
+
         </RelativeLayout>
         </Toolbar>
     </com.google.android.material.appbar.AppBarLayout>
@@ -93,6 +94,28 @@
         android:hint="Address..."
         android:layout_margin="15dp"
         android:padding="10dp"
+        />
+
+    <EditText
+        android:id="@+id/settings_password"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/settings_address"
+        android:hint="New password..."
+        android:layout_margin="15dp"
+        android:padding="10dp"
+        android:inputType="textPassword"
+        />
+
+    <EditText
+        android:id="@+id/settings_confirm_password"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/settings_password"
+        android:hint="Confirm new password..."
+        android:layout_margin="15dp"
+        android:padding="10dp"
+        android:inputType="textPassword"
         />
 
 </RelativeLayout>
