--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -53,12 +53,13 @@
         android:src="@drawable/profile"
         android:layout_marginTop="20dp"
         android:layout_centerHorizontal="true"/>
+
     <TextView
         android:id="@+id/profile_image_change_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/settings_profile_image"
-        android:text="Change profile"
+        android:text="Change profile picture"
         android:textColor="@color/black"
         android:textSize="18sp"
         android:textStyle="bold"
@@ -66,54 +67,156 @@
         android:layout_centerHorizontal="true"
         />
 
+    <TextView
+        android:id="@+id/email_textview"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/profile_image_change_btn"
+        android:layout_marginTop="20dp"
+        android:layout_marginStart="25dp"
+        android:text="Email"
+        android:textStyle="bold"
+        android:textColor="@color/colorPrimary"
+        android:textSize="16sp"
+        />
+
     <EditText
         android:id="@+id/settings_email"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/profile_image_change_btn"
+        android:layout_below="@+id/email_textview"
         android:hint="Email..."
-        android:layout_margin="15dp"
+        android:layout_marginRight="15dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginTop="3dp"
         android:padding="10dp"
+        />
+
+    <TextView
+        android:id="@+id/fullname_textview"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/settings_email"
+        android:layout_marginTop="5dp"
+        android:layout_marginStart="25dp"
+        android:text="Full name"
+        android:textStyle="bold"
+        android:textColor="@color/colorPrimary"
+        android:textSize="16sp"
         />
 
     <EditText
         android:id="@+id/settings_full_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/settings_email"
+        android:layout_below="@+id/fullname_textview"
         android:hint="Full name..."
-        android:layout_margin="15dp"
+        android:layout_marginRight="15dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginTop="3dp"
         android:padding="10dp"
+        />
+
+    <TextView
+        android:id="@+id/address_textview"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/settings_full_name"
+        android:layout_marginTop="5dp"
+        android:layout_marginStart="25dp"
+        android:text="Address"
+        android:textStyle="bold"
+        android:textColor="@color/colorPrimary"
+        android:textSize="16sp"
         />
 
     <EditText
         android:id="@+id/settings_address"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/settings_full_name"
+        android:layout_below="@+id/address_textview"
         android:hint="Address..."
-        android:layout_margin="15dp"
+        android:layout_marginRight="15dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginTop="3dp"
         android:padding="10dp"
+        />
+
+
+    <TextView
+        android:id="@+id/current_password_textview"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/settings_address"
+        android:layout_marginTop="5dp"
+        android:layout_marginStart="25dp"
+        android:text="Password"
+        android:textStyle="bold"
+        android:textColor="@color/colorPrimary"
+        android:textSize="16sp"
+        />
+
+    <TextView
+        android:id="@+id/settings_current_password"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/current_password_textview"
+        android:hint="Password..."
+        android:layout_marginRight="15dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginTop="3dp"
+        android:padding="10dp"
+        android:inputType="textPassword"
+        />
+
+
+
+    <TextView
+        android:id="@+id/new_password_textview"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/settings_current_password"
+        android:layout_marginTop="5dp"
+        android:layout_marginStart="25dp"
+        android:text="New password"
+        android:textStyle="bold"
+        android:textColor="@color/colorPrimary"
+        android:textSize="16sp"
         />
 
     <EditText
         android:id="@+id/settings_password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/settings_address"
+        android:layout_below="@+id/new_password_textview"
         android:hint="New password..."
-        android:layout_margin="15dp"
+        android:layout_marginRight="15dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginTop="3dp"
         android:padding="10dp"
         android:inputType="textPassword"
         />
-
+    <TextView
+        android:id="@+id/confirm_newpassword__textview"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/settings_password"
+        android:layout_marginTop="5dp"
+        android:layout_marginStart="25dp"
+        android:text="Confirm new password"
+        android:textStyle="bold"
+        android:textColor="@color/colorPrimary"
+        android:textSize="16sp"
+        />
     <EditText
         android:id="@+id/settings_confirm_password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/settings_password"
+        android:layout_below="@+id/confirm_newpassword__textview"
         android:hint="Confirm new password..."
-        android:layout_margin="15dp"
+        android:layout_marginRight="15dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginTop="3dp"
         android:padding="10dp"
         android:inputType="textPassword"
         />
