--- a/app/src/main/res/layout/cart_items_layout.xml
+++ b/app/src/main/res/layout/cart_items_layout.xml
@@ -10,8 +10,9 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:padding="10dp"
-        android:layout_marginTop="10dp"
-        android:background="@color/colorPrimary">
+        android:layout_marginTop="5dp"
+        android:background="@drawable/buttons"
+        >
 
         <ImageView
             android:id="@+id/cart_product_image"
