--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -9,7 +9,7 @@
     <RelativeLayout
         android:id="@+id/rll1"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="wrap_content"
         android:background="@color/colorPrimary"
         android:layout_alignParentTop="true">
 
@@ -25,6 +25,33 @@
             android:layout_marginTop="10dp"
             />
     </RelativeLayout>
+
+    <ImageView
+        android:id="@+id/loading_image"
+        android:layout_width="match_parent"
+        android:layout_height="300dp"
+        android:visibility="invisible"
+        android:src="@drawable/loading"
+        android:layout_centerVertical="true"/>
+    <ImageView
+        android:id="@+id/delivery_image"
+        android:layout_width="match_parent"
+        android:layout_height="300dp"
+        android:visibility="invisible"
+        android:src="@drawable/delivery"
+        android:layout_centerVertical="true"/>
+
+    <TextView
+        android:id="@+id/msg1"
+        android:layout_below="@id/loading_image"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textColor="@color/colorPrimary"
+        android:layout_marginEnd="10dp"
+        android:textAlignment="center"
+        android:textSize="20dp"
+        android:visibility="invisible"
+        android:text="Congratulations, your order has been shipped successfully. You will receive your products soon and then you can place another order."/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/cart_list"
