--- a/app/src/main/res/layout/admin_orders_layout.xml
+++ b/app/src/main/res/layout/admin_orders_layout.xml
@@ -82,12 +82,25 @@
             android:layout_below="@id/order_email"
             android:textColor="@color/white"
             />
+        <TextView
+            android:id="@+id/order_state"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_marginLeft="5dp"
+            android:text="State"
+            android:textSize="14sp"
+            android:textStyle="bold"
+            android:layout_marginTop="5dp"
+            android:layout_below="@id/order_date_time"
+            android:textColor="@color/white"
+            />
 
         <Button
             android:id="@+id/admin_show_products_btn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/order_date_time"
+            android:layout_below="@+id/order_state"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
             android:layout_marginTop="10dp"
