--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -41,6 +40,13 @@
         android:visibility="invisible"
         android:src="@drawable/delivery"
         android:layout_centerVertical="true"/>
+    <ImageView
+        android:id="@+id/empty_cart"
+        android:layout_width="match_parent"
+        android:layout_height="300dp"
+        android:visibility="invisible"
+        android:src="@drawable/emptycart"
+        android:layout_centerVertical="true"/>
 
     <TextView
         android:id="@+id/msg1"
@@ -57,11 +63,9 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/cart_list"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_below="@+id/rll1"
         android:layout_above="@+id/next_btn">
-
-
     </androidx.recyclerview.widget.RecyclerView>
 
     <Button
