--- a/app/src/main/res/layout/activity_admin_category.xml
+++ b/app/src/main/res/layout/activity_admin_category.xml
@@ -117,14 +117,30 @@
         android:layout_marginTop="30dp"
         >
 
-        <ImageView
-            android:id="@+id/hats"
-            android:layout_width="wrap_content"
-            android:layout_height="80dp"
-            android:src="@drawable/hats"
-            />
+<!--        <ImageView-->
+<!--            android:id="@+id/hats"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="80dp"-->
+<!--            android:src="@drawable/hats"-->
+<!--            />-->
 
     </LinearLayout>
+
+    <Button
+        android:id="@+id/maintain_btn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_above="@id/check_orders_btn"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginBottom="10dp"
+        android:background="@color/colorPrimary"
+        android:text="Maintain Products"
+        android:textColor="@color/white"
+        android:textSize="20dp"
+        android:textAllCaps="false"
+        />
+
 
     <Button
         android:id="@+id/check_orders_btn"
