--- a/app/src/main/res/layout/activity_admin_edit_products.xml
+++ b/app/src/main/res/layout/activity_admin_edit_products.xml
@@ -8,7 +8,7 @@
     android:layout_marginStart="15dp"
     android:layout_marginEnd="15dp"
     app:cardElevation="15dp"
-    tools:context=".AdminEditProductsActivity"
+    tools:context=".adminActivities.AdminEditProductsActivity"
     android:layout_centerVertical="true">
 
     <RelativeLayout
