--- a/app/src/main/res/layout/activity_admin_order_products.xml
+++ b/app/src/main/res/layout/activity_admin_order_products.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AdminOrderProductsActivity">
+    tools:context=".adminActivities.AdminOrderProductsActivity">
 
     <RelativeLayout
         android:id="@+id/rll3"
