--- a/app/src/main/res/layout/activity_order.xml
+++ b/app/src/main/res/layout/activity_order.xml
@@ -6,6 +6,43 @@
     android:layout_height="match_parent"
     tools:context=".OrderActivity">
 
+    <RelativeLayout
+        android:id="@+id/rll10"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/colorPrimary"
+        android:layout_alignParentTop="true">
+
+        <ImageView
+            android:id="@+id/back_to_cart_img"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            android:layout_marginStart="5dp"
+            android:src="@drawable/back"/>
+
+        <TextView
+            android:id="@+id/back_to_cart_txt"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Back"
+            android:textColor="@color/white"
+            android:textSize="20dp"
+            android:layout_toRightOf="@id/back_to_cart_img"
+            android:layout_marginStart="8dp"
+            android:textStyle="bold"
+            android:layout_marginTop="10dp"
+            />
+    </RelativeLayout>
+
+    <ImageView
+        android:id="@+id/delivery_guy_image"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:src="@drawable/deliveryguy"
+        android:layout_below="@id/rll10"/>
+
     <TextView
         android:id="@+id/txt"
         android:layout_width="match_parent"
@@ -16,6 +53,7 @@
         android:layout_margin="25dp"
         android:textAlignment="center"
         android:textStyle="bold"
+        android:layout_below="@id/delivery_guy_image"
 
         />
 
@@ -24,7 +62,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/txt"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="50dp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:hint="Your name..."
@@ -69,9 +107,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_margin="20dp"
+        android:layout_margin="10dp"
         android:text="Place order"
-        android:background="@color/colorPrimary"
+        android:background="@drawable/buttons"
         android:textColor="@color/white"
         />
 
