--- a/app/src/main/res/layout/activity_product_details.xml
+++ b/app/src/main/res/layout/activity_product_details.xml
@@ -6,16 +6,36 @@
     android:layout_height="match_parent"
     tools:context=".ProductDetailsActivity">
 
-    <ImageView
-        android:id="@+id/product_image_details"
+    <RelativeLayout
+        android:id="@+id/rll9"
         android:layout_width="match_parent"
-        android:layout_height="260dp"
-        android:layout_marginLeft="15dp"
-        android:layout_marginRight="15dp"
-        android:layout_marginTop="100dp"
-        android:scaleType="centerCrop"
-        />
+        android:layout_height="wrap_content"
+        android:background="@color/colorPrimary"
+        android:layout_alignParentTop="true">
 
+        <ImageView
+            android:id="@+id/back_img"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            android:layout_marginStart="5dp"
+            android:src="@drawable/back"/>
+
+        <TextView
+            android:id="@+id/back_home_txt"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Home"
+            android:textColor="@color/white"
+            android:textSize="20dp"
+            android:layout_toRightOf="@id/back_img"
+            android:layout_marginStart="8dp"
+            android:textStyle="bold"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            />
+    </RelativeLayout>
     <TextView
         android:id="@+id/product_name_details"
         android:layout_width="match_parent"
@@ -23,10 +43,21 @@
         android:layout_below="@+id/product_image_details"
         android:text= "Product name"
         android:textColor="@color/black"
-        android:textSize="18sp"
+        android:textSize="25dp"
         android:textStyle="bold"
+        android:textAllCaps="true"
         android:gravity="center"
-        android:layout_marginTop="10dp"/>
+        android:layout_marginTop="20dp"/>
+    <ImageView
+        android:id="@+id/product_image_details"
+        android:layout_width="match_parent"
+        android:layout_height="300dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginTop="100dp"
+        android:scaleType="centerCrop"
+        />
+
 
     <TextView
         android:id="@+id/product_description_details"
@@ -47,10 +78,10 @@
         android:layout_below="@+id/product_description_details"
         android:text= "Product price"
         android:textColor="@color/black"
-        android:textSize="16sp"
+        android:textSize="25sp"
         android:textStyle="bold"
         android:gravity="center"
-        android:layout_marginTop="10dp"/>
+        android:layout_marginTop="15dp"/>
 
     <com.cepheuen.elegantnumberbutton.view.ElegantNumberButton
         android:id="@+id/number_btn"
@@ -58,14 +89,14 @@
         android:layout_height="55dp"
         android:layout_below="@+id/product_price_details"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="20dp"
         android:layout_marginBottom="10dp"
         android:elevation="5dp"
         android:gravity="center"
         app:finalNumber="10"
         app:initialNumber="1"
         app:textSize="16sp"
-        android:background="@color/colorPrimary"
+        android:background="@drawable/buttons"
         >
     </com.cepheuen.elegantnumberbutton.view.ElegantNumberButton>
 
@@ -73,7 +104,7 @@
     android:id="@+id/details_add_product_to_cart"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/colorPrimary"
+    android:background="@drawable/buttons"
     android:text="ADD TO CART"
     android:textColor="@color/white"
     android:textSize="18sp"
