--- a/app/src/main/res/layout/product_items_layout.xml
+++ b/app/src/main/res/layout/product_items_layout.xml
@@ -1,16 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_marginTop="20dp"
     android:layout_marginStart="15dp"
     android:layout_marginEnd="15dp"
-    app:cardElevation="15dp">
+    app:cardCornerRadius="30dp"
+    >
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@drawable/buttons">
 
         <TextView
             android:id="@+id/product_name"
@@ -20,13 +22,16 @@
             android:textAlignment="center"
             android:textSize="20sp"
             android:textStyle="bold"
-            android:textColor="@color/colorPrimary"
+            android:textColor="@color/white"
+            android:padding="10dp"
             />
 
         <ImageView
             android:id="@+id/product_image"
             android:layout_width="match_parent"
-            android:layout_height="200dp"
+            android:layout_height="250dp"
+            android:layout_marginStart="3dp"
+            android:layout_marginEnd="3dp"
             android:layout_below="@id/product_name"
             android:scaleType="center"
             android:layout_marginTop="2dp"
@@ -40,8 +45,8 @@
             android:text="Product description"
             android:textAlignment="center"
             android:textSize="16sp"
-            android:layout_marginTop="2dp"
-            android:textColor="@color/colorPrimary"
+            android:layout_marginTop="5dp"
+            android:textColor="@color/white"
             />
 
         <TextView
@@ -50,10 +55,11 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/product_description"
             android:text="Product price"
+            android:textStyle="bold"
             android:textAlignment="center"
             android:textSize="18sp"
             android:layout_marginTop="10dp"
-            android:textColor="@color/colorPrimary"
+            android:textColor="@color/white"
             />
 
     </RelativeLayout>
