--- a/app/src/main/res/layout/activity_admin_order_products.xml
+++ b/app/src/main/res/layout/activity_admin_order_products.xml
@@ -23,6 +23,7 @@
             android:textAlignment="center"
             android:gravity="center"
             android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
             />
     </RelativeLayout>
 
