--- a/app/src/main/res/layout/activity_order.xml
+++ b/app/src/main/res/layout/activity_order.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="wrap_content"
+    android:layout_height="match_parent"
+    android:fillViewport="true">
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -62,7 +66,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/txt"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="30dp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:hint="Your name..."
@@ -102,6 +106,43 @@
         android:hint="Shippment city..."
         />
 
+    <TextView
+        android:id="@+id/payment_method_txt"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/shippment_city"
+        android:layout_marginTop="15dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:text="Choose your payment method:"
+        android:textColor="@color/colorPrimary"
+        android:textSize="16dp"
+        />
+
+    <RadioGroup
+        android:id="@+id/payment_method_radiogroup"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/payment_method_txt"
+        android:layout_marginTop="10dp">
+        <RadioButton
+            android:id="@+id/card_at_delivery"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Card at delivery"
+            android:layout_marginLeft="20dp"
+            android:textSize="16dp"
+            android:textColor="@color/colorPrimary"/>
+        <RadioButton
+            android:id="@+id/cash_at_delivery"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Cash at delivery"
+            android:layout_marginLeft="20dp"
+            android:textSize="16dp"
+            android:textColor="@color/colorPrimary"/>
+    </RadioGroup>
+
     <Button
         android:id="@+id/place_order_btn"
         android:layout_width="match_parent"
@@ -112,5 +153,5 @@
         android:background="@drawable/buttons"
         android:textColor="@color/white"
         />
-
 </RelativeLayout>
+</ScrollView>
