--- a/app/src/main/res/layout/admin_orders_layout.xml
+++ b/app/src/main/res/layout/admin_orders_layout.xml
@@ -96,11 +96,25 @@
             android:textColor="@color/white"
             />
 
+        <TextView
+            android:id="@+id/order_payment_method"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_marginLeft="5dp"
+            android:text="Payment method:"
+            android:textSize="14sp"
+            android:textStyle="bold"
+            android:layout_marginTop="5dp"
+            android:layout_below="@id/order_state"
+            android:textColor="@color/white"
+            />
+
         <Button
             android:id="@+id/admin_show_products_btn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/order_state"
+            android:layout_below="@+id/order_payment_method"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
             android:layout_marginTop="10dp"
