--- a/app/src/main/res/layout/activity_product_details.xml
+++ b/app/src/main/res/layout/activity_product_details.xml
@@ -1,4 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
+<androidx.core.widget.NestedScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    tools:context=".ProductDetailsActivity"
+    android:background="#fff">
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -85,7 +93,7 @@
 
     <com.cepheuen.elegantnumberbutton.view.ElegantNumberButton
         android:id="@+id/number_btn"
-        android:layout_width="150dp"
+        android:layout_width="120dp"
         android:layout_height="55dp"
         android:layout_below="@+id/product_price_details"
         android:layout_centerHorizontal="true"
@@ -100,17 +108,83 @@
         >
     </com.cepheuen.elegantnumberbutton.view.ElegantNumberButton>
 
-<Button
-    android:id="@+id/details_add_product_to_cart"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="@drawable/buttons"
-    android:text="ADD TO CART"
-    android:textColor="@color/white"
-    android:textSize="18sp"
-    android:layout_alignParentBottom="true"
-    android:layout_alignParentRight="true"
-    android:layout_margin="15dp"
-    />
+    <Button
+        android:id="@+id/details_add_product_to_cart"
+        android:layout_width="55dp"
+        android:layout_height="60dp"
+        android:background="@drawable/buttons"
+        android:text="ADD TO CART"
+        android:textColor="@color/white"
+        android:textSize="16sp"
+        android:layout_below="@id/product_price_details"
+        android:layout_marginTop="20dp"
+        android:layout_alignParentRight="true"
+        android:layout_marginEnd="5dp"
+        />
 
+
+    <View
+        android:background="#2e2e2e"
+        android:id="@+id/view"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_below="@id/number_btn" />
+
+    <ImageView
+        android:id="@+id/post_detail_currentuser_img"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_marginStart="30dp"
+        android:layout_marginLeft="32dp"
+        android:layout_marginTop="30dp"
+        android:layout_below="@id/number_btn"
+        android:src="@drawable/no_avatar" />
+
+    <EditText
+        android:id="@+id/post_detail_comment"
+        android:hint="Write Comment"
+        android:background="@drawable/edittext_button_style_rounded"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginLeft="16dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:layout_below="@id/number_btn"
+        android:layout_toRightOf="@id/post_detail_currentuser_img" />
+
+    <Button
+        android:id="@+id/post_detail_add_comment_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="30dp"
+        android:background="@drawable/edittext_button_style_rounded"
+        android:text="Add"
+        app:layout_constraintBottom_toBottomOf="@+id/post_detail_comment"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        android:layout_toRightOf="@id/post_detail_comment"
+        android:layout_below="@id/number_btn"/>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/comment_list"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
+        android:layout_below="@id/post_detail_currentuser_img"
+        android:scrollbars="vertical"/>
 </RelativeLayout>
+</androidx.core.widget.NestedScrollView>
