--- a/app/src/main/res/layout/activity_admin_orders_history.xml
+++ b/app/src/main/res/layout/activity_admin_orders_history.xml
@@ -60,5 +60,19 @@
         android:layout_below="@+id/rll11">
     </androidx.recyclerview.widget.RecyclerView>
 
+    <TextView
+        android:id="@+id/no_orders_history_txt"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="No orders history to show."
+        android:textColor="#2e2e2e"
+        android:textSize="20dp"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:gravity="center"
+        android:visibility="invisible"
+        />
+
+
 </RelativeLayout>
 </androidx.core.widget.NestedScrollView>
