--- a/app/src/main/res/layout/activity_admin_users.xml
+++ b/app/src/main/res/layout/activity_admin_users.xml
@@ -82,5 +82,18 @@
         android:layout_below="@id/google_users_txt">
     </androidx.recyclerview.widget.RecyclerView>
 
+    <TextView
+        android:id="@+id/no_users_txt"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="No app users to show."
+        android:textColor="#2e2e2e"
+        android:textSize="20dp"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:gravity="center"
+        android:visibility="invisible"
+        />
+
 </RelativeLayout>
 </androidx.core.widget.NestedScrollView>
