--- a/app/src/main/res/layout/activity_category_products.xml
+++ b/app/src/main/res/layout/activity_category_products.xml
@@ -62,5 +62,19 @@
         android:scrollbars="vertical"
         android:layout_below="@id/rll8"
         />
+
+    <TextView
+        android:id="@+id/no_category_products_txt"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="No products in this category to show."
+        android:textColor="#2e2e2e"
+        android:textSize="20dp"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:gravity="center"
+        android:visibility="invisible"
+        />
+
 </RelativeLayout>
 </androidx.core.widget.NestedScrollView>
