--- a/app/src/main/res/layout/activity_search_products.xml
+++ b/app/src/main/res/layout/activity_search_products.xml
@@ -10,14 +10,24 @@
     <RelativeLayout
         android:id="@+id/rll4"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="?attr/actionBarSize"
         android:background="@color/colorPrimary"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true">
 
+        <ImageView
+            android:id="@+id/back_to_home_from_search_img"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            android:layout_marginStart="5dp"
+            android:layout_centerVertical="true"
+            android:src="@drawable/back"/>
+
         <EditText
             android:id="@+id/search_product"
-            android:layout_width="290dp"
+            android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:hint="Enter product name..."
             android:textSize="16dp"
@@ -27,21 +37,20 @@
             android:layout_marginTop="20dp"
             android:layout_marginStart="10dp"
             android:layout_centerVertical="true"
+            android:layout_toRightOf="@id/back_to_home_from_search_img"
             />
 
-        <Button
+        <ImageButton
             android:id="@+id/search_btn"
-            android:layout_width="wrap_content"
+            android:layout_width="30dp"
             android:layout_height="wrap_content"
-            android:layout_toRightOf="@id/search_product"
-            android:text="Search"
-            android:textColor="@color/white"
-            android:textSize="16dp"
-            android:textStyle="bold"
-            android:background="@color/colorPrimary"
-            android:padding="10dp"
-            android:layout_centerInParent="true"
+            android:layout_marginTop="15dp"
+            android:layout_marginBottom="15dp"
+            android:layout_marginEnd="15dp"
+            android:background="@drawable/search_white"
+            android:layout_alignParentEnd="true"
             />
+
     </RelativeLayout>
 
     <androidx.recyclerview.widget.RecyclerView
@@ -49,5 +58,18 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/rll4"/>
+
+    <TextView
+        android:id="@+id/no_searched_products_txt"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="No products with this name to show."
+        android:textColor="#2e2e2e"
+        android:textSize="20dp"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:gravity="center"
+        android:visibility="invisible"
+        />
 
 </RelativeLayout>
