--- a/app/src/main/res/layout/activity_admin_users.xml
+++ b/app/src/main/res/layout/activity_admin_users.xml
@@ -65,13 +65,12 @@
         android:id="@+id/google_users_txt"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Logged in with Google users:"
+        android:fontFamily="@font/alfaslabone_regular"
         android:layout_marginStart="10dp"
         android:layout_marginBottom="5dp"
-        android:textStyle="bold"
-        android:textSize="24dp"
-        android:fontFamily="casual"
-        android:textColor="@color/black"
+        android:text="Logged in with Google users:"
+        android:textSize="20dp"
+        android:textColor="@color/colorPrimary"
         android:layout_below="@id/users_list"
         android:visibility="visible"/>
 
