--- a/app/src/main/res/layout/activity_user_orders.xml
+++ b/app/src/main/res/layout/activity_user_orders.xml
@@ -60,10 +60,10 @@
         android:text="Current order:"
         android:layout_marginStart="10dp"
         android:layout_marginBottom="5dp"
-        android:textStyle="bold"
-        android:textSize="24dp"
-        android:fontFamily="casual"
-        android:textColor="@color/black"
+        android:layout_marginTop="5dp"
+        android:textSize="25dp"
+        android:fontFamily="@font/alfaslabone_regular"
+        android:textColor="@color/colorPrimary"
         android:layout_below="@id/rll5"
         android:visibility="visible"/>
 
@@ -79,13 +79,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
-        android:layout_marginBottom="5dp"
+        android:layout_marginTop="5dp"
         android:text="Orders history:"
-        android:textStyle="bold"
-        android:textSize="24dp"
-        android:fontFamily="casual"
-        android:textColor="@color/black"
-        android:layout_below="@id/user_order_list"/>
+        android:textSize="25dp"
+        android:fontFamily="@font/alfaslabone_regular"
+        android:textColor="@color/colorPrimary"
+        android:layout_below="@id/user_order_list"
+        />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/user_order_history_list"
