--- a/app/src/main/res/layout/activity_product_details.xml
+++ b/app/src/main/res/layout/activity_product_details.xml
@@ -7,9 +7,8 @@
     android:layout_height="wrap_content"
     tools:context=".ProductDetailsActivity"
     android:background="#fff">
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ProductDetailsActivity">
@@ -108,20 +107,18 @@
         >
     </com.cepheuen.elegantnumberbutton.view.ElegantNumberButton>
 
-    <Button
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/details_add_product_to_cart"
-        android:layout_width="55dp"
-        android:layout_height="60dp"
-        android:background="@drawable/buttons"
-        android:text="ADD TO CART"
-        android:textColor="@color/white"
-        android:textSize="16sp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/fab_margin"
+        android:layout_alignParentRight = "true"
         android:layout_below="@id/product_price_details"
-        android:layout_marginTop="20dp"
-        android:layout_alignParentRight="true"
-        android:layout_marginEnd="5dp"
+        app:srcCompat="@drawable/add_shopping_cart_white"
+        android:backgroundTint="@color/colorPrimary"
+        app:borderWidth="0dp"
+        app:elevation="12dp"
         />
-
 
     <View
         android:background="#2e2e2e"
@@ -143,7 +140,7 @@
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_marginStart="30dp"
-        android:layout_marginLeft="32dp"
+        android:layout_marginLeft="30dp"
         android:layout_marginTop="30dp"
         android:layout_below="@id/number_btn"
         android:src="@drawable/no_avatar" />
@@ -156,28 +153,25 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="30dp"
-        android:layout_marginLeft="16dp"
         android:ems="10"
         android:inputType="textPersonName"
         android:layout_below="@id/number_btn"
-        android:layout_toRightOf="@id/post_detail_currentuser_img" />
+        android:layout_toRightOf="@id/post_detail_currentuser_img"
+        android:layout_toLeftOf="@id/post_detail_add_comment_btn"
+        />
 
     <Button
         android:id="@+id/post_detail_add_comment_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
+        android:layout_below="@id/number_btn"
         android:layout_marginTop="30dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_alignParentEnd="true"
         android:background="@drawable/edittext_button_style_rounded"
         android:text="Add"
-        app:layout_constraintBottom_toBottomOf="@+id/post_detail_comment"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        android:layout_toRightOf="@id/post_detail_comment"
-        android:layout_below="@id/number_btn"/>
+        />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/comment_list"
@@ -186,5 +180,6 @@
         android:layout_marginTop="15dp"
         android:layout_below="@id/post_detail_currentuser_img"
         android:scrollbars="vertical"/>
+
 </RelativeLayout>
 </androidx.core.widget.NestedScrollView>
