--- a/app/src/main/res/layout/activity_search_products.xml
+++ b/app/src/main/res/layout/activity_search_products.xml
@@ -27,8 +27,8 @@
 
         <EditText
             android:id="@+id/search_product"
-            android:layout_width="300dp"
             android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
             android:hint="Enter product name..."
             android:textSize="16dp"
             android:textColorHint="@color/colorPrimary"
@@ -36,7 +36,9 @@
             android:padding="10dp"
             android:layout_marginTop="20dp"
             android:layout_marginStart="10dp"
+            android:layout_marginEnd="5dp"
             android:layout_centerVertical="true"
+            android:layout_toLeftOf="@id/search_btn"
             android:layout_toRightOf="@id/back_to_home_from_search_img"
             />
 
@@ -46,7 +48,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
             android:layout_marginBottom="15dp"
-            android:layout_marginEnd="15dp"
+            android:layout_marginEnd="10dp"
             android:background="@drawable/search_white"
             android:layout_alignParentEnd="true"
             />
