modified product price into double and added filter method at search products

--- a/app/src/main/res/layout/activity_admin_edit_products.xml
+++ b/app/src/main/res/layout/activity_admin_edit_products.xml
@@ -108,7 +108,7 @@
             android:padding="12dp"
             android:layout_margin="5dp"
             android:textColor="@color/colorPrimary"
-            android:inputType="number"
+            android:inputType="numberDecimal"
             />
 
         <Button
