--- a/app/src/main/res/layout/activity_order.xml
+++ b/app/src/main/res/layout/activity_order.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="match_parent"
-    android:fillViewport="true">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:fillViewport="true"
+    android:scrollbars="vertical"
+    >
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -43,7 +45,7 @@
     <ImageView
         android:id="@+id/delivery_guy_image"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
+        android:layout_height="170dp"
         android:src="@drawable/deliveryguy"
         android:layout_below="@id/rll10"/>
 
@@ -52,13 +54,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Please confirm your shippment details"
-        android:textSize="18sp"
+        android:textSize="18dp"
         android:textColor="@color/colorPrimary"
         android:layout_margin="25dp"
         android:textAlignment="center"
         android:textStyle="bold"
         android:layout_below="@id/delivery_guy_image"
-
         />
 
     <EditText
@@ -147,8 +148,10 @@
         android:id="@+id/place_order_btn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_margin="10dp"
+        android:layout_below="@id/payment_method_radiogroup"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginTop="20dp"
         android:text="Place order"
         android:background="@drawable/buttons"
         android:textColor="@color/white"
