--- a/app/src/main/res/layout/activity_product_details.xml
+++ b/app/src/main/res/layout/activity_product_details.xml
@@ -93,7 +93,7 @@
     <com.cepheuen.elegantnumberbutton.view.ElegantNumberButton
         android:id="@+id/number_btn"
         android:layout_width="120dp"
-        android:layout_height="55dp"
+        android:layout_height="wrap_content"
         android:layout_below="@+id/product_price_details"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp"
