--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -28,7 +28,7 @@
 
               <TextView
                   android:id="@+id/close_settings"
-                  android:layout_width="match_parent"
+                  android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="Back"
                   android:textColor="@color/white"
@@ -44,7 +44,7 @@
                 android:layout_height="wrap_content"
                 android:text="Update"
                 android:textColor="@color/white"
-                android:textSize="20sp"
+                android:textSize="20dp"
                 android:textStyle="bold"
                 android:layout_alignParentEnd="true"
                 android:layout_marginTop="10dp"
