--- a/app/src/main/res/layout/cart_items_layout.xml
+++ b/app/src/main/res/layout/cart_items_layout.xml
@@ -22,7 +22,7 @@
 
         <TextView
             android:id="@+id/cart_product_name"
-            android:layout_width="160dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="105dp"
             android:text="Product Name"
@@ -32,9 +32,10 @@
 
         <TextView
             android:id="@+id/cart_product_quantity"
-            android:layout_width="160dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
+            android:layout_toRightOf="@id/cart_product_name"
             android:layout_marginLeft="5dp"
             android:text="Product quantity"
             android:textAlignment="textEnd"
