--- a/app/src/main/res/layout/comment_layout.xml
+++ b/app/src/main/res/layout/comment_layout.xml
@@ -45,7 +45,8 @@
 
     <TextView
         android:id="@+id/comment_date"
-        android:textSize="12sp"
+        android:textSize="12dp"
+        android:textAlignment="textEnd"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -54,7 +55,8 @@
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
         android:text="10:20"
-        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_toRightOf="@id/comment_username"
         />
     </RelativeLayout>
 </RelativeLayout>
