created add sales feature

--- a/app/src/main/res/layout/activity_about_us.xml
+++ b/app/src/main/res/layout/activity_about_us.xml
@@ -67,8 +67,8 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/story_about"
         android:layout_marginTop="5dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginEnd="10dp"
+        android:layout_marginStart="15dp"
+        android:layout_marginEnd="15dp"
         android:textColor="@color/black"
         android:fontFamily="sans-serif"
         android:textSize="18dp"
@@ -94,13 +94,13 @@ While most consumers don’t realize it, considering the changes continue to cyc
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/story_technology"
-        android:layout_marginStart="10dp"
-        android:layout_marginEnd="10dp"
+        android:layout_marginStart="15dp"
+        android:layout_marginEnd="15dp"
         android:layout_marginTop="5dp"
         android:textColor="@color/black"
         android:fontFamily="sans-serif"
         android:textSize="18dp"
-        android:text="     The retail landscape is overcrowded and customers are becoming desensitized to traditional marketing methods. That’s where augmented reality comes in. As shoppers turn to a blend of online, mobile, and bricks-and-mortar shopping for their convenience, brands and retailers are having to think of new and innovative ways in which they can capture customer attention. \n  Augmented reality – or AR – has the power to bring an image, product label or even shop window to life. Customers can see brands and their stock in a new way and engage with them on a completely new level. \n  It’s creative, innovative, and it works. Customers are lapping up AR integration in store and brands are beginning to take note \n "/>
+        android:text="     The retail landscape is overcrowded and customers are becoming desensitized to traditional marketing methods. That’s where augmented reality comes in. As shoppers turn to a blend of online, mobile, and bricks-and-mortar shopping for their convenience, brands and retailers are having to think of new and innovative ways in which they can capture customer attention. \n  Augmented reality – or AR – has the power to bring an image, product label or even shop window to life. Customers can see brands and their stock in a new way and engage with them on a completely new level. \n  It’s creative, innovative, and it works. Customers are lapping up AR integration in store and brands are beginning to take note "/>
     <TextView
         android:id="@+id/story_brand"
         android:layout_width="match_parent"
@@ -119,8 +119,8 @@ While most consumers don’t realize it, considering the changes continue to cyc
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/story_brand"
-        android:layout_marginStart="10dp"
-        android:layout_marginEnd="10dp"
+        android:layout_marginStart="15dp"
+        android:layout_marginEnd="15dp"
         android:layout_marginTop="5dp"
         android:textColor="@color/black"
         android:fontFamily="sans-serif"
