--- a/app/src/main/res/layout/activity_admin_edit_products.xml
+++ b/app/src/main/res/layout/activity_admin_edit_products.xml
@@ -61,7 +61,6 @@
             android:id="@+id/product_image_edit"
             android:layout_width="match_parent"
             android:layout_height="200dp"
-            android:scaleType="center"
             android:layout_marginTop="2dp"
             />
 
@@ -71,7 +70,7 @@
             android:layout_height="wrap_content"
             android:hint="Product name"
             android:textAlignment="center"
-            android:textSize="16sp"
+            android:textSize="16dp"
             android:background="@drawable/input_design"
             android:padding="12dp"
             android:layout_margin="5dp"
@@ -88,7 +87,7 @@
             android:layout_below="@id/product_name_edit"
             android:hint="Product description"
             android:textAlignment="center"
-            android:textSize="16sp"
+            android:textSize="16dp"
             android:background="@drawable/input_design"
             android:padding="12dp"
             android:layout_margin="5dp"
@@ -103,7 +102,7 @@
             android:layout_below="@id/product_description_edit"
             android:hint="Product price"
             android:textAlignment="center"
-            android:textSize="18sp"
+            android:textSize="18dp"
             android:background="@drawable/input_design"
             android:padding="12dp"
             android:layout_margin="5dp"
@@ -118,7 +117,7 @@
             android:layout_below="@id/product_price_edit"
             android:hint="Product discount (percent)"
             android:textAlignment="center"
-            android:textSize="18sp"
+            android:textSize="18dp"
             android:background="@drawable/input_design"
             android:padding="12dp"
             android:layout_margin="5dp"
@@ -134,7 +133,7 @@
             android:text="Save changes"
 
             android:textAlignment="center"
-            android:textSize="18sp"
+            android:textSize="18dp"
             android:background="@drawable/buttons"
             android:padding="12dp"
             android:layout_margin = "5dp"
@@ -148,7 +147,7 @@
             android:layout_below="@id/apply_changes_btn"
             android:text="Delete product"
             android:textAlignment="center"
-            android:textSize="18sp"
+            android:textSize="18dp"
             android:background="@drawable/buttons"
             android:padding="12dp"
             android:layout_marginTop = "30dp"
