--- a/app/src/main/res/layout/activity_admin_add_new_product.xml
+++ b/app/src/main/res/layout/activity_admin_add_new_product.xml
@@ -101,7 +101,7 @@
         android:layout_marginRight="45dp"
         android:padding="17dp"
         android:layout_marginTop="20dp"
-        android:textSize="18sp"
+        android:textSize="18dp"
         android:textAllCaps="false"
         android:textColor="@color/white"
         android:background="@drawable/buttons"
