--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -35,7 +35,7 @@
         android:hint="Email address"
         android:textColor="@color/colorPrimary"
         android:textColorHint="@color/colorPrimary"
-        android:textSize="17sp"
+        android:textSize="17dp"
         android:textStyle="bold"
         />
 
@@ -54,11 +54,11 @@
         android:inputType="textPassword"
         android:textColor="@color/colorPrimary"
         android:textColorHint="@color/colorPrimary"
-        android:textSize="17sp"
+        android:textSize="17dp"
         android:textStyle="bold"
         />
 
-    <LinearLayout
+    <RelativeLayout
         android:id="@+id/linear_layout_1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -76,9 +76,10 @@
             android:textColor="@color/colorPrimary"
             app:cbd_strokeColor = "@color/colorPrimary"
             android:gravity="center_vertical"
-            android:textSize="16sp"
+            android:textSize="18dp"
             android:textStyle="bold"
-            android:layout_marginLeft="17dp"
+            android:layout_marginStart="17dp"
+            android:layout_alignParentStart="true"
             />
 
         //forget password
@@ -88,11 +89,15 @@
             android:layout_height="wrap_content"
             android:textColor="@color/colorPrimary"
             android:text="Forgot Password"
-            android:textSize="16sp"
+            android:textSize="18dp"
             android:textStyle="bold"
-            android:layout_marginLeft="100dp"
+            android:textAlignment="textEnd"
+            android:layout_alignParentEnd="true"
+            android:layout_toRightOf="@id/remember_me_chkb"
+            android:layout_centerVertical="true"
+            android:layout_marginEnd="17dp"
             />
-    </LinearLayout>
+    </RelativeLayout>
 
     //login button
     <Button
@@ -107,7 +112,7 @@
         android:background="@drawable/buttons"
         android:padding="17dp"
         android:textAllCaps="false"
-        android:textSize="18sp"
+        android:textSize="18dp"
         android:text="Login"
         android:textColor="@color/white"
         />
@@ -121,7 +126,7 @@
         android:layout_alignParentEnd="true"
         android:layout_below="@+id/login_btn"
         android:text="I'm an admin"
-        android:textSize="20sp"
+        android:textSize="20dp"
         android:textStyle="bold"
         android:layout_marginLeft="80dp"
         android:layout_marginEnd="23dp"
@@ -136,7 +141,7 @@
         android:layout_alignParentStart="true"
         android:layout_below="@+id/login_btn"
         android:text="I'm not an admin"
-        android:textSize="20sp"
+        android:textSize="20dp"
         android:textStyle="bold"
         android:layout_marginLeft="80dp"
         android:layout_marginStart="25dp"
