--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,7 +27,7 @@
         android:text="Discover,Try,Purchase"
         android:textAlignment="center"
         android:textColor="@color/colorPrimary"
-        android:textSize="22sp"
+        android:textSize="22dp"
         android:textStyle="bold|italic"
         />
 
@@ -42,7 +42,7 @@
         android:background="@drawable/buttons"
         android:padding="20dp"
         android:textAllCaps="false"
-        android:textSize="18sp"
+        android:textSize="18dp"
         android:text="Already have an account? Login"
         android:textColor="@color/white"
         />
@@ -58,7 +58,7 @@
         android:background="@drawable/input_design"
         android:padding="20dp"
         android:textAllCaps="false"
-        android:textSize="18sp"
+        android:textSize="18dp"
         android:text="Join now"
         android:textColor="@color/white"
         android:textStyle="bold"
