--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -33,7 +33,7 @@
         android:hint="Full name"
         android:textColor="@color/colorPrimary"
         android:textColorHint="@color/colorPrimary"
-        android:textSize="17sp"
+        android:textSize="17dp"
         android:textStyle="bold"
         />
 
@@ -51,7 +51,7 @@
         android:hint="Email address"
         android:textColor="@color/colorPrimary"
         android:textColorHint="@color/colorPrimary"
-        android:textSize="17sp"
+        android:textSize="17dp"
         android:textStyle="bold"
         />
 
@@ -70,7 +70,7 @@
         android:inputType="textPassword"
         android:textColor="@color/colorPrimary"
         android:textColorHint="@color/colorPrimary"
-        android:textSize="17sp"
+        android:textSize="17dp"
         android:textStyle="bold"
         />
 
@@ -88,7 +88,7 @@
         android:inputType="textPassword"
         android:textColor="@color/colorPrimary"
         android:textColorHint="@color/colorPrimary"
-        android:textSize="17sp"
+        android:textSize="17dp"
         android:textStyle="bold"
         />
 
@@ -105,7 +105,7 @@
         android:background="@drawable/buttons"
         android:padding="17dp"
         android:textAllCaps="false"
-        android:textSize="18sp"
+        android:textSize="18dp"
         android:text="Create account"
         android:textColor="@color/white"
         />
