--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -69,7 +69,7 @@
         android:layout_below="@id/settings_profile_image"
         android:text="Change profile picture"
         android:textColor="@color/black"
-        android:textSize="18sp"
+        android:textSize="18dp"
         android:textStyle="bold"
         android:layout_marginTop="10dp"
         android:layout_centerHorizontal="true"
@@ -85,7 +85,7 @@
         android:text="Email"
         android:textStyle="bold"
         android:textColor="@color/colorPrimary"
-        android:textSize="16sp"
+        android:textSize="16dp"
         />
 
     <EditText
@@ -98,6 +98,7 @@
         android:layout_marginLeft="15dp"
         android:layout_marginTop="3dp"
         android:padding="10dp"
+        android:backgroundTint="@color/colorPrimary"
         />
 
     <TextView
@@ -110,7 +111,7 @@
         android:text="Full name"
         android:textStyle="bold"
         android:textColor="@color/colorPrimary"
-        android:textSize="16sp"
+        android:textSize="16dp"
         />
 
     <EditText
@@ -123,6 +124,7 @@
         android:layout_marginLeft="15dp"
         android:layout_marginTop="3dp"
         android:padding="10dp"
+        android:backgroundTint="@color/colorPrimary"
         />
 
     <TextView
@@ -135,7 +137,7 @@
         android:text="Address"
         android:textStyle="bold"
         android:textColor="@color/colorPrimary"
-        android:textSize="16sp"
+        android:textSize="16dp"
         />
 
     <EditText
@@ -148,6 +150,7 @@
         android:layout_marginLeft="15dp"
         android:layout_marginTop="3dp"
         android:padding="10dp"
+        android:backgroundTint="@color/colorPrimary"
         />
 
 
@@ -161,7 +164,7 @@
         android:text="Password"
         android:textStyle="bold"
         android:textColor="@color/colorPrimary"
-        android:textSize="16sp"
+        android:textSize="16dp"
         />
 
     <TextView
@@ -175,6 +178,7 @@
         android:layout_marginTop="3dp"
         android:padding="10dp"
         android:inputType="textPassword"
+        android:backgroundTint="@color/colorPrimary"
         />
 
 
@@ -189,7 +193,7 @@
         android:text="New password"
         android:textStyle="bold"
         android:textColor="@color/colorPrimary"
-        android:textSize="16sp"
+        android:textSize="16dp"
         />
 
     <EditText
@@ -203,6 +207,7 @@
         android:layout_marginTop="3dp"
         android:padding="10dp"
         android:inputType="textPassword"
+        android:backgroundTint="@color/colorPrimary"
         />
     <TextView
         android:id="@+id/confirm_newpassword__textview"
@@ -214,7 +219,7 @@
         android:text="Confirm new password"
         android:textStyle="bold"
         android:textColor="@color/colorPrimary"
-        android:textSize="16sp"
+        android:textSize="16dp"
         />
     <EditText
         android:id="@+id/settings_confirm_password"
@@ -227,6 +232,7 @@
         android:layout_marginTop="3dp"
         android:padding="10dp"
         android:inputType="textPassword"
+        android:backgroundTint="@color/colorPrimary"
         />
 
 </RelativeLayout>
