--- a/app/src/main/res/layout/cart_items_layout.xml
+++ b/app/src/main/res/layout/cart_items_layout.xml
@@ -24,25 +24,25 @@
             android:id="@+id/cart_product_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="105dp"
+            android:layout_toRightOf="@id/cart_product_image"
+            android:layout_marginStart="5dp"
             android:text="Product Name"
             android:textColor="@color/white"
-            android:textSize="14sp"
+            android:textSize="14dp"
             android:textStyle="bold" />
 
         <TextView
             android:id="@+id/cart_product_quantity"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
             android:layout_toRightOf="@id/cart_product_name"
-            android:layout_marginLeft="5dp"
-            android:text="Product quantity"
+            android:layout_alignParentEnd="true"
             android:textAlignment="textEnd"
-            android:textSize="14sp"
+            android:text="Product quantity"
+            android:textSize="14dp"
             android:textStyle="bold"
             android:textColor="@color/white"
-            android:layout_marginRight="5dp"/>
+            android:layout_marginEnd="5dp"/>
 
         <TextView
             android:id="@+id/cart_product_price"
@@ -53,7 +53,7 @@
             android:layout_marginLeft="5dp"
             android:text="Product price"
             android:textAlignment="textEnd"
-            android:textSize="14sp"
+            android:textSize="14dp"
             android:textStyle="bold"
             android:textColor="@color/white"
             android:layout_marginRight="5dp"
