--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -30,7 +30,7 @@
         android:paddingTop="@dimen/nav_header_vertical_spacing"
         android:text="Username"
         android:gravity="center"
-        android:textSize="20sp"
+        android:textSize="20dp"
         android:textStyle="bold"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
