--- a/app/src/main/res/layout/product_items_layout.xml
+++ b/app/src/main/res/layout/product_items_layout.xml
@@ -20,7 +20,7 @@
             android:layout_height="wrap_content"
             android:text="Product Name"
             android:textAlignment="center"
-            android:textSize="20sp"
+            android:textSize="20dp"
             android:textStyle="bold"
             android:textColor="@color/white"
             android:padding="10dp"
@@ -33,7 +33,6 @@
             android:layout_marginStart="3dp"
             android:layout_marginEnd="3dp"
             android:layout_below="@id/product_name"
-            android:scaleType="center"
             android:layout_marginTop="2dp"
             />
 
@@ -44,7 +43,7 @@
             android:layout_below="@id/product_image"
             android:text="Product description"
             android:textAlignment="center"
-            android:textSize="16sp"
+            android:textSize="16dp"
             android:layout_marginTop="5dp"
             android:textColor="@color/white"
             />
@@ -57,7 +56,7 @@
             android:text="Product price"
             android:textStyle="bold"
             android:textAlignment="center"
-            android:textSize="18sp"
+            android:textSize="18dp"
             android:layout_marginTop="10dp"
             android:textColor="@color/white"
             />
